// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> Variants with details property renders a banner alert with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "message" "details";
  background: #FFFFFF;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

<div
  className="emotion-4 emotion-5"
  display="grid"
>
  <div
    className="emotion-0 emotion-1"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with details property renders a card alert with details 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-4 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "message" "details";
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-4 emotion-5"
  display="grid"
>
  <div
    className="emotion-0 emotion-1"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with details property renders a inline alert with details 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-4 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "message" "details";
  border: none;
}

<div
  className="emotion-4 emotion-5"
  display="grid"
>
  <div
    className="emotion-0 emotion-1"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-2 emotion-3"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a banner alert with danger intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  background: #fbebeb;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

.emotion-0 {
  color: #D93838;
  font-size: 0.875rem;
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="danger"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-error emotion-0 emotion-1"
      color="intent.danger.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a banner alert with info intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  background: #eceffd;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #4263EB;
  font-size: 0.875rem;
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="info"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-info-sign emotion-0 emotion-1"
      color="intent.info.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a banner alert with success intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  background: #e9f2eb;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

.emotion-0 {
  color: #29863A;
  font-size: 0.875rem;
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="success"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-tick-circle emotion-0 emotion-1"
      color="intent.success.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a banner alert with warning intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  background: #f9ede6;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

.emotion-0 {
  color: #C55205;
  font-size: 0.875rem;
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="warning"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-warning-sign emotion-0 emotion-1"
      color="intent.warning.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a card alert with danger intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #D93838;
  font-size: 0.875rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="danger"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-error emotion-0 emotion-1"
      color="intent.danger.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a card alert with info intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #4263EB;
  font-size: 0.875rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="info"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-info-sign emotion-0 emotion-1"
      color="intent.info.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a card alert with success intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #29863A;
  font-size: 0.875rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="success"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-tick-circle emotion-0 emotion-1"
      color="intent.success.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a card alert with warning intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #C55205;
  font-size: 0.875rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="warning"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-warning-sign emotion-0 emotion-1"
      color="intent.warning.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a inline alert with danger intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #D93838;
  font-size: 0.875rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  border: none;
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="danger"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-error emotion-0 emotion-1"
      color="intent.danger.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a inline alert with info intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #4263EB;
  font-size: 0.875rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  border: none;
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="info"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-info-sign emotion-0 emotion-1"
      color="intent.info.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a inline alert with success intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #29863A;
  font-size: 0.875rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  border: none;
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="success"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-tick-circle emotion-0 emotion-1"
      color="intent.success.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent property renders a inline alert with warning intent 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #C55205;
  font-size: 0.875rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message";
  grid-template-columns: 0fr 1fr;
  border: none;
}

<div
  className="emotion-6 emotion-7"
  display="grid"
>
  <div
    aria-label="warning"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-warning-sign emotion-0 emotion-1"
      color="intent.warning.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a banner alert, with danger intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

.emotion-0 {
  color: #D93838;
  font-size: 0.875rem;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  background: #fbebeb;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="danger"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-error emotion-0 emotion-1"
      color="intent.danger.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a banner alert, with info intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #4263EB;
  font-size: 0.875rem;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  background: #eceffd;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="info"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-info-sign emotion-0 emotion-1"
      color="intent.info.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a banner alert, with success intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

.emotion-0 {
  color: #29863A;
  font-size: 0.875rem;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  background: #e9f2eb;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="success"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-tick-circle emotion-0 emotion-1"
      color="intent.success.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a banner alert, with warning intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

.emotion-0 {
  color: #C55205;
  font-size: 0.875rem;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  background: #f9ede6;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="warning"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-warning-sign emotion-0 emotion-1"
      color="intent.warning.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a card alert, with danger intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

.emotion-0 {
  color: #D93838;
  font-size: 0.875rem;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="danger"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-error emotion-0 emotion-1"
      color="intent.danger.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a card alert, with info intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #4263EB;
  font-size: 0.875rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="info"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-info-sign emotion-0 emotion-1"
      color="intent.info.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a card alert, with success intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

.emotion-0 {
  color: #29863A;
  font-size: 0.875rem;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="success"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-tick-circle emotion-0 emotion-1"
      color="intent.success.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a card alert, with warning intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

.emotion-0 {
  color: #C55205;
  font-size: 0.875rem;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="warning"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-warning-sign emotion-0 emotion-1"
      color="intent.warning.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a inline alert, with danger intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

.emotion-0 {
  color: #D93838;
  font-size: 0.875rem;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  border: none;
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="danger"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-error emotion-0 emotion-1"
      color="intent.danger.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a inline alert, with info intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #4263EB;
  font-size: 0.875rem;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  border: none;
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="info"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-info-sign emotion-0 emotion-1"
      color="intent.info.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a inline alert, with success intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

.emotion-0 {
  color: #29863A;
  font-size: 0.875rem;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  border: none;
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="success"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-tick-circle emotion-0 emotion-1"
      color="intent.success.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with details property renders a inline alert, with warning intent, with details 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.875rem;
  line-height: 1.5;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-6 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intentPlaceholder;
}

.emotion-0 {
  color: #C55205;
  font-size: 0.875rem;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message" "intentPlaceholder details";
  grid-template-columns: 0fr 1fr;
  border: none;
}

<div
  className="emotion-10 emotion-11"
  display="grid"
>
  <div
    aria-label="warning"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-warning-sign emotion-0 emotion-1"
      color="intent.warning.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    aria-hidden="true"
    className="emotion-6 emotion-3"
  />
  <div
    className="emotion-8 emotion-9"
    color="monochrome.grey80"
    fontSize="size4"
  >
    Here are some alert details
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a banner alert, with danger intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #D93838;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  background: #fbebeb;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="danger"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-error emotion-0 emotion-1"
      color="intent.danger.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a banner alert, with info intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #4263EB;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  background: #eceffd;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="info"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-info-sign emotion-0 emotion-1"
      color="intent.info.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a banner alert, with success intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #29863A;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  background: #e9f2eb;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="success"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-tick-circle emotion-0 emotion-1"
      color="intent.success.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a banner alert, with warning intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #C55205;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  background: #f9ede6;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="warning"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-warning-sign emotion-0 emotion-1"
      color="intent.warning.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a card alert, with danger intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #D93838;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="danger"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-error emotion-0 emotion-1"
      color="intent.danger.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a card alert, with info intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #4263EB;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="info"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-info-sign emotion-0 emotion-1"
      color="intent.info.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a card alert, with success intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #29863A;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="success"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-tick-circle emotion-0 emotion-1"
      color="intent.success.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a card alert, with warning intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #C55205;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="warning"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-warning-sign emotion-0 emotion-1"
      color="intent.warning.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a inline alert, with danger intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #D93838;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  border: none;
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="danger"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-error emotion-0 emotion-1"
      color="intent.danger.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a inline alert, with info intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #4263EB;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  border: none;
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="info"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-info-sign emotion-0 emotion-1"
      color="intent.info.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a inline alert, with success intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #29863A;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  border: none;
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="success"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-tick-circle emotion-0 emotion-1"
      color="intent.success.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with intent with onClose property renders a inline alert, with warning intent, with an on close 1`] = `
.emotion-4 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-12 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-10:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10 i {
  vertical-align: middle;
}

.emotion-10 i {
  color: #989A9C;
}

.emotion-10:hover:enabled {
  color: #0F0F10;
}

.emotion-10:hover:enabled i {
  color: #0F0F10;
}

.emotion-10:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-10:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-10:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-6 {
  font-size: larger;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: intent;
}

.emotion-0 {
  color: #C55205;
  font-size: 0.875rem;
}

.emotion-14 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "intent message action";
  grid-template-columns: 0fr 1fr 0fr;
  border: none;
}

<div
  className="emotion-14 emotion-15"
  display="grid"
  onClose={[Function]}
>
  <div
    aria-label="warning"
    className="emotion-2 emotion-3"
  >
    <i
      className="ar ar-warning-sign emotion-0 emotion-1"
      color="intent.warning.default"
      fontSize="size4"
    />
  </div>
  <div
    className="emotion-4 emotion-5"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-12 emotion-3"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-10 emotion-11"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-8 emotion-9"
      >
        <i
          className="ar ar-cross emotion-6 emotion-1"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with onClose property renders a banner alert with an on close 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "message action";
  grid-template-columns: 1fr 0fr;
  background: #FFFFFF;
  border-bottom: none;
  border-left: none;
  border-right: none;
  border-top: none;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
}

.emotion-6 i {
  vertical-align: middle;
}

.emotion-6 i {
  color: #989A9C;
}

.emotion-6:hover:enabled {
  color: #0F0F10;
}

.emotion-6:hover:enabled i {
  color: #0F0F10;
}

.emotion-6:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-6:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-6:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-2 {
  font-size: larger;
}

<div
  className="emotion-10 emotion-11"
  display="grid"
  onClose={[Function]}
>
  <div
    className="emotion-0 emotion-1"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-8 emotion-9"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-6 emotion-7"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-4 emotion-5"
      >
        <i
          className="ar ar-cross emotion-2 emotion-3"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with onClose property renders a card alert with an on close 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
}

.emotion-6 i {
  vertical-align: middle;
}

.emotion-6 i {
  color: #989A9C;
}

.emotion-6:hover:enabled {
  color: #0F0F10;
}

.emotion-6:hover:enabled i {
  color: #0F0F10;
}

.emotion-6:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-6:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-6:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-2 {
  font-size: larger;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "message action";
  grid-template-columns: 1fr 0fr;
  border-radius: 6px;
  box-shadow: 0 0 1px rgba(37,39,45,0.47),0 5px 8px -4px rgba(37,39,45,0.3);
}

<div
  className="emotion-10 emotion-11"
  display="grid"
  onClose={[Function]}
>
  <div
    className="emotion-0 emotion-1"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-8 emotion-9"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-6 emotion-7"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-4 emotion-5"
      >
        <i
          className="ar ar-cross emotion-2 emotion-3"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<Alert /> Variants with onClose property renders a inline alert with an on close 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
}

.emotion-8 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  grid-area: action;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 3px;
  font-family: Motiva Sans;
  font-weight: 500;
  line-height: 1;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-transition: box-shadow 0.3s ease,background 0.2s ease;
  transition: box-shadow 0.3s ease,background 0.2s ease;
  padding: 0 0.25rem;
  height: 1.5rem;
  font-size: 0.75rem;
  background-color: transparent;
  border: 1px solid transparent;
  color: #5B5D61;
  border: 1px solid transparent;
}

.emotion-6:disabled {
  background: #EBECEC;
  border: 1px solid transparent;
  color: rgba(120,121,125,0.7);
  cursor: not-allowed;
}

.emotion-6:enabled {
  cursor: pointer;
}

.emotion-6 i {
  vertical-align: middle;
}

.emotion-6 i {
  color: #989A9C;
}

.emotion-6:hover:enabled {
  color: #0F0F10;
}

.emotion-6:hover:enabled i {
  color: #0F0F10;
}

.emotion-6:active:enabled {
  background-color: #F2F2F2;
  color: #0F0F10;
}

.emotion-6:focus:enabled {
  box-shadow: 0 0 0 1px #FFFFFF,0 0 0 2px #081D17;
}

.emotion-6:disabled {
  background-color: transparent;
  color: rgba(120,121,125,0.7);
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  visibility: visible;
}

.emotion-2 {
  font-size: larger;
}

.emotion-10 {
  font-family: Motiva Sans;
  padding: 1rem;
  box-sizing: border-box;
  border: 1px solid #E0E1E2;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-column-gap: 1rem;
  grid-row-gap: 0.5rem;
  grid-template-areas: "message action";
  grid-template-columns: 1fr 0fr;
  border: none;
}

<div
  className="emotion-10 emotion-11"
  display="grid"
  onClose={[Function]}
>
  <div
    className="emotion-0 emotion-1"
    color="monochrome.grey100"
    fontSize="size4"
    fontWeight="medium"
  >
    Hey look, an alert!
  </div>
  <div
    className="emotion-8 emotion-9"
  >
    <button
      aria-label="close"
      className="button--minimal emotion-6 emotion-7"
      disabled={false}
      onClick={[Function]}
      size="small"
    >
      <div
        className="loadedContent"
      />
      <div
        className="emotion-4 emotion-5"
      >
        <i
          className="ar ar-cross emotion-2 emotion-3"
          fontSize="larger"
        />
      </div>
    </button>
  </div>
</div>
`;
